fixed navbar on mobile devices - now it wont show up in the side of the page

--- a/css/about.css
+++ b/css/about.css
@@ -255,6 +255,14 @@ nav .fa {
     margin-top: -1%;
 }
 
+.header .fa {
+    font-size: 23px;
+    margin-right:-3%;
+    margin-top: -4%;
+}
+
+
+
 
 /* -----------mobile :small, medium and large media queries --------*/
 
@@ -279,7 +287,7 @@ nav .fa {
     }
 
     .nav-links {
-        position:absolute;
+        position:fixed;
         background: #ffffff;
         height: 100vh;
         width:200px;
@@ -312,6 +320,10 @@ nav .fa {
 
     .blog-right {
         margin-top: 5%;
+    }
+
+    .about-us {
+        margin-top: -20%;
     }
 
 }
