--- a/css/main-page.css
+++ b/css/main-page.css
@@ -285,11 +285,87 @@ nav .fa {
     margin-top: -1%;
 }
 
-
+.header .fa {
+    font-size: 23px;
+    margin-right:-3%;
+    margin-top: -4%;
+}
 
 /* -----------mobile :small, medium and large media queries --------*/
 
 @media (max-width:700px) {
+    
+    /* first page with picture */
+
+    .text-box h1 {
+        font-size: 30px;
+    }
+
+    #secondaryHeader {
+        margin:10px 0 40px;
+        font-size: 15px;
+    }
+
+    /* navbar */
+
+    .nav-links ul li {
+        display: block;
+    }
+
+    .nav-links {
+        position:fixed;
+        background: #ffffff;
+        height: 100vh;
+        width:200px;
+        top:0;
+        right:-200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+
+    nav .fa {
+        display: block;
+        color: #ec8ca4;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+
+    .nav-links ul{
+        padding: 30px;
+    }
+
+    nav img {
+        margin-left: -20%;
+    }
+
+    /* courses */
+
+    .row {
+        flex-direction: column;
+    }
+
+    .course-col2 {
+        margin-bottom: 5%;
+    }
+
+    /* testimonials */
+
+    .testimonials-col img {
+        margin-left: 0px;
+        margin-right: 12px;
+        
+    }
+
+    /*call to action*/
+    .cta h1 {
+        font-size: 21px;
+    }
+}
+
+
+@media (max-width:1023px) and (min-width: 701px) {
     
     /* first page with picture */
 
