--- a/css/projects.css
+++ b/css/projects.css
@@ -287,7 +287,11 @@ nav .fa {
     opacity: 1;
 }
 
-
+.header .fa {
+    font-size: 23px;
+    margin-right:-3%;
+    margin-top: -4%;
+}
 
 /* -----------mobile :small, medium and large media queries --------*/
 
@@ -312,7 +316,7 @@ nav .fa {
     }
 
     .nav-links {
-        position:absolute;
+        position:fixed;
         background: #ffffff;
         height: 100vh;
         width:200px;
